--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "CFX2GIS"
+name = "CXF2GIS"
 version = "0.0.1"
 authors = [
   { name="Manuele Pesenti", email="manuele@inventati.org" },
